--- a/public/index.html
+++ b/public/index.html
@@ -35,4 +35,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+  </script>
 </html>
